--- a/microsetta_interface/templates/sample.jinja2
+++ b/microsetta_interface/templates/sample.jinja2
@@ -235,7 +235,7 @@
                             {% if not sample.sample_remove_locked and not admin_mode %}
                                 <button class="btn btn-white-red-border me-5" name="remove_button" onClick="return verifyDissociateSample();">{{ _('Remove') }}</button>
                             {% endif %}
-                            {% if sample.sample_edit_locked and not admin_mod %}
+                            {% if sample.sample_edit_locked and not admin_mode %}
                             <span class="kit-tooltip-text">{{ _('Your sample has been received by our lab and can no longer be edited. Please <a href="mailto:microsetta@ucsd.edu">contact us</a> with any questions.') }}</span>
                             {% else %}
                                 <button class="btn btn-white-blue-border" name="cancel_button" onClick="return goToKits();">{{ _('Cancel') }}</button>
