Code review changes

--- a/microsetta_interface/templates/account_details.jinja2
+++ b/microsetta_interface/templates/account_details.jinja2
@@ -373,7 +373,7 @@
             {% if CREATE_ACCT %}
             <div class="col-12">
                 <label for="consent_privacy_terms" name="consent_privacy_terms_label" class="tmi-content">
-                    <input id="consent_privacy_terms" name="consent_privacy_terms" type="checkbox" value="true">
+                    <input id="consent_privacy_terms" name="consent_privacy_terms" type="checkbox" value="True">
                     {{ _('I agree to the <a href="https://microsetta.ucsd.edu/privacy-statement/" target="_blank">Privacy Statement</a> and accept the <a href="https://microsetta.ucsd.edu/terms-and-conditions/" target="_blank">Terms and Conditions</a>') }}
                 </label><br />
                 <label for="consent_privacy_terms" class="error" style="display: none;">{{ _('Please agree to the Privacy Statement and Terms and Conditions') }}</label>
