--- a/microsetta_interface/templates/consents.jinja2
+++ b/microsetta_interface/templates/consents.jinja2
@@ -38,20 +38,15 @@
                                 <h2>{{ _('Survey') }}</h2>
                             </div>
                             <div class="consent-col col-end">
-                                <a href="/accounts/{{ account_id }}/sources/{{ source_id }}/consents/{{ consents['survey']['consent_id'] }}/view" class="consent-link" target="_blank">
+                                <a href="/accounts/{{ account_id }}/sources/{{ source_id }}/consents/data/view" class="consent-link" target="_blank">
                                     <img src="/static/img/pdf.svg" height="20" width="20" class="me-1"/> View
-                                </a>
-                            </div>
-                            <div class="consent-col">
-                                <a href="/accounts/{{ account_id }}/sources/{{ source_id }}/consents/{{ consents['survey']['consent_id'] }}/download" class="consent-link">
-                                    <img src="/static/img/download.svg" height="20" width="20" class="me-1"/> Download
                                 </a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            {% if consents['sample'] is not none %}
+            {% if biospecimen_consent is not none %}
             <div class="row">
                 <div class="col-12">
                     <div class="card p-4 mt-4">
@@ -60,13 +55,8 @@
                                 <h2>{{ _('Biospecimen') }}</h2>
                             </div>
                             <div class="consent-col col-end">
-                                <a href="#" class="consent-link">
+                                <a href="/accounts/{{ account_id }}/sources/{{ source_id }}/consents/biospecimen/view" class="consent-link" target="_blank">
                                     <img src="/static/img/pdf.svg" height="20" width="20" class="me-1"/> {{ _('View') }}
-                                </a>
-                            </div>
-                            <div class="consent-col">
-                                <a href="#" class="consent-link">
-                                    <img src="/static/img/download.svg" height="20" width="20" class="me-1"/> {{ _('Download') }}
                                 </a>
                             </div>
                         </div>
