--- a/microsetta_interface/templates/survey.jinja2
+++ b/microsetta_interface/templates/survey.jinja2
@@ -371,6 +371,6 @@
         observer.observe(document.body, config);
     });
     </script>
-    <script type="text/javascript" src="/static/vue_survey_form.js"></script>
+    <script type="text/javascript" src="/static/vue_survey_form_{{ _('en_us') }}.js"></script>
 {% endblock %}
 
