--- a/microsetta_interface/static/css/minimal_interface.css
+++ b/microsetta_interface/static/css/minimal_interface.css
@@ -100,6 +100,26 @@ a.breadcrumb-item-profile {
     text-decoration: none;
 }
 
+.logo-co {
+    width: 300px;
+    height: 65px;
+    object-fit: contain;
+    padding-left: 30px;
+}
+
+@media (max-width: 575.98px) {
+    .logo-co {
+        width: 200px;
+        height: 44px;
+        object-fit: contain;
+        padding-left: 30px;
+    }
+
+    .profile-header-icon {
+        display: none;
+    }
+}
+
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion
 {
@@ -512,6 +532,16 @@ h1.profile-h1 {
     }
 }
 
+@media (max-width: 575.98px) {
+    .profile-nav-container {
+        margin-top: 15px;
+    }
+
+    #profile-kebab-dropdown {
+        margin-top: 24px;
+    }
+}
+
 .nav-toggle {
     width: 190px;
     text-align: center;
@@ -664,6 +694,13 @@ span.survey-title {
     width: 500px;
     margin: auto;
     text-align: left;
+}
+
+@media (max-width: 575.98px) {
+    .kit_id_container {
+        width: 90%;
+        margin: auto;
+    }
 }
 
 @media (min-width: 600px) {
@@ -1050,6 +1087,16 @@ input.barcode-checkbox[type=checkbox]:checked+label {
     align-items: center;
     padding: 0px;
     gap: 16px;
+}
+
+@media (max-width: 575.98px) {
+    .new_kit_sample_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0px;
+        gap: 16px;
+    }
 }
 
 .barcode-row {
